--- a/front_end-react/package.json
+++ b/front_end-react/package.json
@@ -11,7 +11,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
